...
    const onChainWallet = wallets[0];
    tmpWallets.push({
      wallet: onChainWallet,
      title: 'Bitcoin',
      isActivated: true,
      subtitle: loc.wallets.main_wallet_label,
      testID: 'OnChainWalletRow',
      walletID: onChainWallet?.getID?.(),
    });

    tmpWallets.push({
      wallet: lnWallet,
      title: 'Bitcoin',
      isActivated: true,
      subtitle: loc.wallets.lightning_spark_wallet_label,
      testID: 'LightningWalletRow',
      walletID: lnWallet?.getID?.(),
      onDummyPress: onAddLightningPress,
      isCreatingLightning: (isCreating || isAddingLightning) && !lnWallet,
    });

    return tmpWallets;
...
                </Text>
              </View>
            </TouchableOpacity>
          ) : (
            <View />
          )}
          <TouchableOpacity accessibilityRole="button" testID="Settings" style={styles.walletDetails} onPress={() => navigate('Settings')}>
            <Icon name="more-horiz" type="material" size={22} color="#FFFFFF" />
          </TouchableOpacity>
        </View>
      )}
      <DfxServicesButtons />
      <View style={[styles.list, stylesHook.list]}>
...
          </TouchableOpacity>
        ))}
      </View>
      <FContainer ref={walletActionButtonsRef}>
        {wallet?.allowReceive() && (
          <FButton
            testID="ReceiveButton"
            text={loc.receive.header}
            onPress={onReceiveButtonPressed}
            icon={
              <View style={styles.receiveIcon}>
                <Icon name="arrow-down" size={buttonFontSize} type="font-awesome" color={colors.buttonAlternativeTextColor} />
              </View>
...
        />
        {(wallet?.allowSend() || (wallet?.type === WatchOnlyWallet.type && wallet?.isHd())) && (
          <FButton
            onLongPress={sendButtonLongPress}
            onPress={sendButtonPress}
            text={loc.send.header}
            testID="SendButton"
            icon={
              <View style={styles.sendIcon}>
                <Icon name="arrow-down" size={buttonFontSize} type="font-awesome" color={colors.buttonAlternativeTextColor} />
              </View>
            }
          />
...
